# hush

./: .gitignore  Anchor.toml  Arcium.toml  Cargo.toml  README.md  package-lock.json  package.json  tsconfig.base.json
apps/web/: next.config.ts  package.json  tsconfig.json
apps/web/src/app/: config.ts  globals.css  layout.tsx  page.tsx  theme.ts  wallet.ts
apps/web/src/app/app/: AppExperience.tsx  page.tsx
apps/web/src/app/app/activity/: page.tsx
apps/web/src/app/app/employees/: page.tsx
apps/web/src/app/app/payroll/: page.tsx
apps/web/src/app/app/setup/: SetupExperience.tsx  page.tsx
apps/web/src/app/app/setup/definitions/: page.tsx
apps/web/src/app/app/setup/deposit/: page.tsx
apps/web/src/app/app/setup/mint/: page.tsx
apps/web/src/app/app/setup/organization/: page.tsx
apps/web/src/app/employee/: EmployeeExperience.tsx  page.tsx
apps/web/src/shims/: fs.ts
encrypted-ixs/src/: lib.rs
programs/silence/: Cargo.toml
programs/silence/src/: lib.rs  payroll_circuits.rs
scripts/: init-definitions.ts
