[workspace]
members = ["programs/silence", "encrypted-ixs"]
default-members = ["programs/silence"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://example.com/silence"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
